--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@gsap/react": "^2.1.2",
     "@relume_io/relume-tailwind": "^1.3.0",
     "@relume_io/relume-ui": "^1.3.1",
+    "@sanity/image-url": "^2.0.2",
     "gsap": "^3.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.10.0"
+    "react-router-dom": "^7.10.0",
+    "sanity": "^4.20.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
